WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139508
Web Inspector: Inspector Process crash when navigating to non-inspectable page
https://bugs.webkit.org/show_bug.cgi?id=139508
Summary
Web Inspector: Inspector Process crash when navigating to non-inspectable page
Joseph Pecoraro
Reported
2014-12-10 14:49:47 PST
* SUMMARY Inspector Process crash when going back to non-inspectable page. * STEPS TO REPRODUCE 1. Open Safari to Favorites view 2. Load
http://bogojoker.com
3. Open Inspector 4. Navigate Back => Inspector Process crashes while in the process of closing * CRASH DETAILS Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000008 Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit IPC::Connection::sendMessage(std::__1::unique_ptr<IPC::MessageEncoder, std::__1::default_delete<IPC::MessageEncoder> >, unsigned int) + 36 1 com.apple.WebKit bool IPC::Connection::send<Messages::WebInspector::SendMessageToBackend>(Messages::WebInspector::SendMessageToBackend&&, unsigned long long, unsigned int) + 105 2 com.apple.WebKit non-virtual thunk to WebKit::WebInspectorUI::sendMessageToBackend(WTF::String const&) + 29 3 com.apple.WebCore WebCore::jsInspectorFrontendHostPrototypeFunctionSendMessageToBackend(JSC::ExecState*) + 357 (RefPtr.h:59) ...
Attachments
[PATCH] Proposed Fix
(2.01 KB, patch)
2014-12-10 14:51 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2014-12-10 14:51:28 PST
Created
attachment 243069
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 2
2014-12-10 14:51:52 PST
<
rdar://problem/18605190
>
WebKit Commit Bot
Comment 3
2014-12-11 11:27:34 PST
Comment on
attachment 243069
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 243069 Committed
r177164
: <
http://trac.webkit.org/changeset/177164
>
WebKit Commit Bot
Comment 4
2014-12-11 11:27:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug