Web Inspector: Inspector Process crash when navigating to non-inspectable page https://bugs.webkit.org/show_bug.cgi?id=139508

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2014-12-11
Reviewed by Zalan Bujtas.

The Inspector Process can still receive InspectorFrontendHost messages
even though the backend connection has been invalidated and cleared.
Only send messages if the connection exists.

* WebProcess/WebPage/WebInspectorUI.cpp:
(WebKit::WebInspectorUI::openInNewTab):
(WebKit::WebInspectorUI::sendMessageToBackend):

Canonical link: https://commits.webkit.org/157413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177164 268f45cc-cd09-0410-ab3c-d52691b4dbfc